style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/* Reset */

*, *::before, *::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

#root, #__next {
  isolation: isolate;
}

/* General Styling */

.page-container {
    display: flex;
    flex-direction: column;
}

:root {
    --bg-secondary: #e5e5e5; 
    --very-light: #14b8a6;
    --light: #0d9488;
    --dark: #0f766e;
    --dark-red: #991b1b;
    --font-weight-medium: 500;
    --font-weight-bold: 700;
    --font-weight-very-bold: 900;
}

body {
  font-family: 'Roboto', arial, Verdana, Geneva, Tahoma, sans-serif;
}

/* Header */

header {
    position: sticky;
    height: 5rem;
    background-color: white;
    display: grid;
    grid-template-columns: 4rem 1fr 9rem 9rem;
    padding: 1rem 2rem;
}

.icon-container {
    cursor: pointer;
}

header > a > img {
    border-radius: 50px;
    height: 3rem;
    width: 3rem;
    object-fit: cover;
    object-position: center;
}

.header-title {
    font-size: 2rem;
    font-weight: var(--font-weight-very-bold);
    color: var(--dark)
}

header > button {
    color: white;
    background-color: var(--dark);
    border-radius: 16px;
    margin: 0 0.5rem;
    border: none;
    transition: background-color 0.3s ease;
    font-weight: var(--font-weight-medium);
    cursor: pointer;
}

header > button:hover {
    background-color: var(--very-light);
}

/* Main */

main {
    display: flex;
    flex-direction: column;
    min-height: calc(100vh - 10rem);
    overflow-y: auto;
}

.library {
    background-color: var(--bg-secondary);
    overflow-y: auto;
    flex-grow:  1;
    padding: 2rem 10rem 2rem 10rem;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
    gap: 1rem;
    z-index: 2;
}

.book-card {
    background-color: white;
    border-radius: 12px;
    height: 16rem;
    min-width: 5rem;
    display: grid;
    grid-template: 9fr 1fr 1fr 1fr 1fr / 4fr 1fr;
    overflow: hidden;
    padding: 0.5rem;
}

.book-icon {
  grid-column: 1 / 3;
  overflow: hidden;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: top;
  border-radius: 4px;
}

.book-title,
.book-author {
  grid-column: 1 / 3;
}

.book-title,
.book-author,
.page-number {
  background-color: white;
  font-size: 0.8rem;
  color: var(--light)
}

.book-title {
  font-size: 0.9rem;
  padding-top: 0.3rem;
  line-height: 1rem;
}

.read-icon,
.not-read-icon {
  grid-area: 4 / 2 / -1 / -1;
  background-color: white;
  fill: var(--dark);
  max-width: 2rem;
  height: auto;
}

.not-read-icon {
  fill: var(--dark-red);
}

.read-icon:hover,
.not-read-icon:hover {
  cursor: pointer;
}

.white-filler {
  background-color: white;
  grid-area: 5 / 1 / span 1 / span 1;
}

/* Add book dialog */

.add-book-dialog {
  background-color: white;
  box-shadow: 0px 0px 4px 0px rgba(80, 80, 80, 0.5);;
  border: none;
  border-radius: 16px;
  height: 27rem;
  width: 50rem;
  min-width: 25rem;
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 7rem;
  justify-self: center;
  padding: 2rem;
  gap: 1rem;
}

.book-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.form-title {
  color: var(--dark);
}

.form-group {
  display: grid;
  grid-template-columns: 1fr 4fr;
}

.form-group label {
  color: var(--light);
}

form input,
form select {
  width: 60ch;
  height: 2rem;
  border-radius: 8px;
  border: 1px var(--light) solid;
  padding-left: 0.5rem;
  transition: border 0.3s ease;
}

input:focus, select:focus {
  border: 2px var(--dark) solid;
  outline: none;
}

.form-add-button-container {
  align-self: center;
  display: flex;
  gap: 1rem;
}

form button {
  background-color: var(--dark);
  color: white;
  border: none;
  border-radius: 8px;
  width: 6rem;
  height: 2.5rem;
  margin-top: 2rem;
  font-size: 1.2rem;
  cursor: pointer;
  transition: background-color 0.3s ease
}

form button:hover {
  background-color: var(--very-light);
}

/* Delete book dialog */

.delete-book-dialog {
  background-color: white;
  box-shadow: 0px 0px 4px 0px rgba(80, 80, 80, 0.5);;
  border: none;
  border-radius: 16px;
  min-height: 27rem;
  width: 36rem;
  min-width: 25rem;
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 7rem;
  justify-self: center;
  padding: 2rem;
  gap: 1rem;
}

.delete-book-form {
  display: grid;
  grid-template-rows: 1fr;
}

.delete-book-container {
  min-height: 2rem;
  display: grid;
  grid-template-columns: 0.5fr 4fr 0.5fr;
}

.delete-form-text {
  align-self: center;
  justify-self: center;
  color: var(--light)
}

.delete-form-title {
  justify-self: left;
}

input[type="checkbox"] {
  -webkit-appearance: none;
  appearance: none;
  background-color: #fff;
  margin: 0;
  font: inherit;
  color: currentColor;
  width: 1.15em;
  height: 1.15em;
  border: 0.15em solid var(--light);
  border-radius: 50px;
  transform: translateY(-0.075em);
  display: grid;
  place-content: center;
  align-self: center;
  margin-top: 0.2rem;
  cursor: pointer;
  transition: border 0.3s ease;
}

input[type="checkbox"]:hover {
  border: 0.15em solid var(--dark);
}

input[type="checkbox"]::before {
  content: "";
  width: 0.65em;
  height: 0.65em;
  transform: scale(0);
  transition: 120ms transform ease-in-out;
  box-shadow: inset 1rem 1rem var(--light);
  margin-left: -0.5rem;
}

input[type="checkbox"]:checked::before {
  transform: scale(1);
  border-radius: 50px;
}

.form-delete-button-container {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

/* Footer */

footer {
    height: 5rem;
    display: grid;
    grid-template-rows: 1fr 1fr;
    align-items: center;
    justify-items: center;
    padding: 1rem;
}

.credit {
    display: flex;
    gap: 0.3rem;
}

footer a {
    text-decoration: none;
    color: var(--light);
    transition: color 0.3s ease;
}

footer a:hover {
  color: var(--dark);
}

.credit img {
    height: 1.2rem;
    width: 1.2rem;
}

